--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -16,6 +16,8 @@
   template:
     src: "templates/apache.conf.j2"
     dest: "/etc/apache2/sites-available/{{ http_conf_file }}"
+  notify:
+    - Restart Apache
 
 - name: "Enable Apache"
   service: 
